fix background image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,13 @@ h1, h2, h3, h4, h5, h6, p {
   width: 100%;
   height: 100%;
 }
+
+@media(max-width:767px){
+  .background-overlay {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(http://static1.squarespace.com/static/561ebe6de4b043ff3d74da27/t/561ff2fce4b0662b883e109b/1444934511103/IMG_2945.JPG) no-repeat center center fixed; 
+  }
+}
+
 /*banner*/
 .background-overlay h1 {
   position: relative;
@@ -261,6 +268,12 @@ img {
   margin-bottom: 100px;
   margin-top: 13%;
   text-align: center;
+}
+
+@media (max-width:767px) {
+  #menu {
+    margin-bottom: 0;
+  }
 }
 
 #menu .button {
